[project]
name = "sql-dhost"
version = "0.1.0"
description = "A Python package for generating SQL queries using LLMs"
authors = [
    { name="Sujan Midatani", email="sujanmidatani7@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.50.0",
    "openai>=1.77.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.urls]
"Homepage" = "https://github.com/sujanMidatani7/sql-dhost"